Project - Roman Numerals Converter/001-roman-numerals-converter/cf-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service. 
Parameters:
  myKeyPair:
    Description: Select your keypair 
    Type: AWS::EC2::KeyPair::KeyName
  myAZs:
    Description: Select the AZ 
    Type: AWS::EC2::AvailabilityZone::Name
  LatestImageID:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
Resources:
  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH and HTTP Security Group # Required
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80

  myEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: !Ref myAZs 
      ImageId: !Ref LatestImageID
      InstanceType: t2.micro
      KeyName: !Ref myKeyPair 
      SecurityGroupIds:
        - !Ref mySecGrp
      Tags: !Sub
        - Key: Name
          Value: "Web Server of ${AWS::StackName}" 
      UserData: Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install python3 -y
          pip3 install flask
          cd ~
          wget -P https://raw.githubusercontent.com/Mehmet-Peker/my-projects/main/Project%20-%20Roman%20Numerals%20Converter/001-roman-numerals-converter/templates/index.html .
          wget -P https://raw.githubusercontent.com/Mehmet-Peker/my-projects/main/Project%20-%20Roman%20Numerals%20Converter/001-roman-numerals-converter/templates/result.html .
          wget https://raw.githubusercontent.com/Mehmet-Peker/my-projects/main/Project%20-%20Roman%20Numerals%20Converter/001-roman-numerals-converter/app.py
          python3 app.py
  
Outputs:
  myURL: !Sub 
   - 'www.${Domain}'
   - Domain: !GetAtt myEC2Instance.PublicDnsName
